AC_INIT(TGWOpen,1.0.0,kopoliitti@gmail.com)

AM_INIT_AUTOMAKE

AC_PREREQ(2.61)
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC_STDC
AC_PROG_GCC_TRADITIONAL
AM_PROG_CC_C_O
AC_C_CONST
AC_FUNC_CLOSEDIR_VOID

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdint.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_DIRENT
AC_TYPE_SSIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_CHECK_FUNCS([strdup strndup memset])
AC_FUNC_MALLOC
AC_FUNC_STAT

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
